<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="protonmail">ProtonMail</string>
    <string name="encrypted_emails">ENCRYPTED EMAIL</string>
    <string name="secure_email_swiss">Secure Email Based\nin Switzerland</string>
    <string name="decrypt_mailbox">Decrypt <b>Mailbox</b></string>
    <string name="decrypt">Decrypt</string>
    <string name="user_sign_in">User Login</string>
    <string name="two_factor_sign_in">Two Factor Authentication</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_question">Are you sure you want to sign out?</string>
    <string name="remember_me_on_device">Remember me on this device</string>
    <string name="show_password">Show password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_password">Login Password</string>
    <string name="mailbox_password">Mailbox Password</string>
    <string name="two_factor_code">Two Factor Code</string>
    <string name="processing_request">Your request is being processed</string>
    <string name="need_account_sign_up">Need an account? Sign Up.</string>
    <string name="need_to_be_logged_in">You are not logged in!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_mailbox_password">RESET MAILBOX PASSWORD</string>
    <string name="forgot_mailbox_password">To reset your mailbox password, please use the web version of ProtonMail at protonmail.com</string>
    <string name="error_chrome_disabled">Impossible to load content. Please enable Chrome</string>
    <string name="error_chrome_not_found">Impossible to load content. Please install Chrome</string>
    <string name="messages_load_failure">Unable to retrieve messages</string>
    <string name="message_details_load_failure">Unable to retrieve message details</string>
    <string name="no_more_messages">No more messages</string>
    <string name="mailbox_login_failure">Failed to login to mailbox</string>
    <string name="login_failure">Failed to login</string>
    <string name="invalid_server_proof">Invalid server proof</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="invalid_mailbox_password">Invalid mailbox password</string>
    <string name="not_signed_up">You are not signed up for the ProtonMail Android Beta</string>
    <string name="no_network">No network</string>
    <string name="no_network_queued">No network, message queued</string>
    <string name="update_app_title">Update required</string>
    <string name="update_app">Your ProtonMail app cannot be used until it is updated</string>
    <string name="api_offline_title">ProtonMail API offline</string>
    <string name="api_offline">ProtonMail is currently offline, check our twitter for the current status: https://twitter.com/protonmail</string>
    <string name="cannot_open">Can\'t open file</string>
    <string name="downloaded_attachment">Downloaded %s</string>
    <string name="edit_contact_validation">Please enter a valid name and email</string>
    <string name="contact_saved">Contact saved</string>
    <string name="contact_saved_offline">Contact saved, will be synced when connection is available</string>
    <string name="contact_exist">Contact email already exist</string>
    <string name="invalid_email">Email address is not valid</string>
    <string name="duplicate_email">Email address is a duplicate</string>
    <string name="invalid_code">Code is not valid</string>
    <string name="message_drafted">Message sending failed. Your messages are saved in drafts folder</string>
    <string name="message_drafted_reason">%s does not exist.\nCan\'t deliver email.</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="inbox_option">INBOX</string>
    <string name="starred_option">STARRED</string>
    <string name="drafts_option">DRAFTS</string>
    <string name="sent_option">SENT</string>
    <string name="archive_option">ARCHIVE</string>
    <string name="trash_option">TRASH</string>
    <string name="spam_option">SPAM</string>
    <string name="contacts_option">CONTACTS</string>
    <string name="settings_option">SETTINGS</string>
    <string name="report_bugs_option">REPORT BUGS</string>
    <string name="signout_option">SIGN OUT</string>
    <string name="inbox">Inbox</string>
    <string name="starred">Starred</string>
    <string name="drafts">Drafts</string>
    <string name="sent">Sent</string>
    <string name="archive">Archive</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="contacts">Contacts</string>
    <string name="contact_groups">Contact Groups</string>
    <string name="search_contacts">Search contacts</string>
    <string name="fetching_contacts">Fetching ProtonMail contacts...</string>
    <string name="fetching_contacts_success">Contacts refreshed successfully</string>
    <string name="fetching_contacts_failure">Unable to refresh contacts</string>
    <string name="search">Search</string>
    <string name="search_messages">Search messages</string>
    <string name="no_search_results">No search results</string>
    <string name="compose">Compose</string>
    <string name="compose_message">Compose message</string>
    <string name="empty_folder">Empty Folder</string>
    <string name="view_headers">View Headers</string>
    <string name="message_headers">Message Header</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_messages">Delete messages</string>
    <string name="add_label">Add Label</string>
    <string name="add_star">Add star</string>
    <string name="remove_star">Remove star</string>
    <string name="mark_read">Mark read</string>
    <string name="mark_unread">Mark unread</string>
    <string name="move_to_archive">Move to Archive</string>
    <string name="move_to_trash">Move to Trash</string>
    <string name="move_to_spam">Move to Spam</string>
    <string name="move_to_inbox">Move to Inbox</string>
    <string name="move_message_to_trash">Move message to trash?</string>
    <string name="are_you_sure_empty">Are you sure you want to delete all messages from this folder?</string>
    <string name="send">Send</string>
    <string name="selected">Selected</string>
    <string name="no_messages">No messages</string>
    <string name="no_labels">No labels</string>
    <string name="to">To</string>
    <string name="cc">Cc</string>
    <string name="bcc">Bcc</string>
    <string name="to_prefix">To:</string>
    <string name="cc_prefix">Cc:</string>
    <string name="bcc_prefix">Bcc:</string>
    <string name="from_prefix">From:</string>
    <string name="date_prefix">Date:</string>
    <string name="expiration_time_prefix">Expires in</string>
    <string name="view_details">DETAILS</string>
    <string name="hide_details">HIDE DETAILS</string>
    <string name="attachment_size" translatable="false">(%s)</string>
    <string name="download">DOWNLOAD</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply All</string>
    <string name="forward">Forward</string>
    <string name="subject">Subject</string>
    <string name="email_subject">Email subject</string>
    <string name="define_message_password">Message Password</string>
    <string name="confirm_message_password">Confirm Password</string>
    <string name="define_password_hint">Define Hint (Optional)</string>
    <string name="message_passwords_do_not_match">Login Passwords do not match</string>
    <string name="message_mailbox_passwords_do_not_match">Mailbox Passwords do not match</string>
    <string name="eo_passwords_do_not_match">Passwords do not match</string>
    <string name="define_expiration_period">Define Expiration Period</string>
    <string name="set_message_expiration">Set Message Expiration</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="max_labels_exceeded">The message %1$s cannot have more than %2$d labels.</string>
    <string name="max_labels_selected">%d labels is the maximum allowed</string>
    <string name="max_attachments_reached">Maximum attachments per message has been reached</string>
    <string name="max_attachments_size_reached">Maximum attachments size per message has been reached</string>
    <plurals name="hours_string">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="days_string">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="minutes_string">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="attachments">
        <item quantity="one">One Attachment</item>
        <item quantity="other">%d Attachments</item>
    </plurals>
    <plurals name="attachments_non_descriptive">
        <item quantity="one">\u0020 1 Attachment</item>
        <item quantity="other">\u0020 %d Attachments</item>
    </plurals>
    <string name="add_attachment">Add attachment</string>
    <string name="select_file">Select file</string>
    <string name="attach_file">Attach file</string>
    <string name="take_photo">Take photo</string>
    <string name="problem_taking_photo">There was a problem taking a photo</string>
    <string name="problem_selecting_file">There was a problem adding the selected file</string>
    <string name="add_contact">Add Contact</string>
    <string name="delete_contact">Remove %s from Contacts?</string>
    <string name="sync_contact">Sync %s with the web app?</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_destructive_action">Are you sure? This cannot be undone.</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="email_address">Email address</string>
    <string name="phone">Phone number</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="syncing_messages">Syncing...</string>
    <string name="upselling_donate_subtitle">Your donation will help us add
    capacity and continue to develop ProtonMail as free and open source software. It is only through the
    support of the community that we are able to continue providing ProtonMail to people around
    the world.</string>
    <string name="upselling_donate_pick_amount">Select a donation amount or enter any amount</string>
    <string name="amount_5">5€</string>
    <string name="amount_15">15€</string>
    <string name="amount_50">50€</string>
    <string name="amount_100">100€</string>
    <string name="donation_amount">Enter donation amount</string>
    <string name="donate">Donate</string>
    <string name="donate_paypal_bitcoin">Donate via PayPal or Bitcoin</string>
    <string name="upgrade">Upgrade</string>
    <string name="no_payment_methods">You have no saved payment methods.</string>
    <string name="edit_payment_methods">Please log in through protonmail.com to edit billing information.</string>
    <string name="add_folder">Add Folder</string>
    <string name="unlock_using_biometrics">Unlock using biometrics</string>
    <string name="biometric_error_hw_not_available">Biometric hardware not available.</string>
    <string name="plan_and_user">Plan</string>
    <string name="payment_method">Payment Method</string>
    <string name="auto_lock_app">Auto-lock app</string>
    <string name="auto_lock_description">Turn this feature on to auto-lock your\napp and use a PIN code or fingerprint\nto unlock it.</string>
    <string name="change_pin_code">Change PIN code</string>
    <string name="auto_lock_timer">Auto-lock timer</string>
</resources>