<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2020 Proton Technologies AG

This file is part of ProtonMail.

ProtonMail is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

ProtonMail is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with ProtonMail. If not, see https://www.gnu.org/licenses/.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mark_unread"
        android:icon="@drawable/top_unread"
        android:title="@string/mark_unread"
		app:showAsAction="never"
	/>

    <item
        android:id="@+id/move_to_trash"
        android:icon="@drawable/top_trash"
        android:title="@string/move_to_trash"
		app:showAsAction="always"
	/>

    <item
        android:id="@+id/delete_message"
        android:icon="@drawable/top_trash"
        android:title="@string/delete_messages"
		app:showAsAction="ifRoom"
	/>

    <item
        android:id="@+id/add_label"
        android:icon="@drawable/top_label"
        android:title="@string/add_label"
        app:showAsAction="always"
        android:visible="false" />

    <item
        android:id="@+id/add_folder"
        android:icon="@drawable/top_folder"
        android:title="@string/add_folder"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/add_star"
        android:icon="@drawable/ic_menu_starred"
        android:title="@string/add_star"
		app:showAsAction="ifRoom"
	/>

    <item
        android:id="@+id/remove_star"
        android:icon="@drawable/ic_menu_starred"
        android:title="@string/remove_star"
		app:showAsAction="ifRoom"
	/>

    <item
        android:id="@+id/mark_read"
        android:title="@string/mark_read"
        app:showAsAction="never" />

    <item
        android:id="@+id/move_to_archive"
        android:title="@string/move_to_archive"
        app:showAsAction="never" />

    <item
        android:id="@+id/move_to_inbox"
        android:title="@string/move_to_inbox"
        app:showAsAction="never" />

    <item
        android:id="@+id/move_to_spam"
        android:title="@string/move_to_spam"
        app:showAsAction="never" />

</menu>
