<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2020 Proton Technologies AG

This file is part of ProtonMail.

ProtonMail is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

ProtonMail is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with ProtonMail. If not, see https://www.gnu.org/licenses/.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/compose"
        android:icon="@drawable/ic_menu_compose"
        android:title="@string/compose_message"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/empty"
        android:title="@string/empty_folder"
        app:showAsAction="never" />
    <item android:id="@+id/mark_all_as_read" android:title="@string/mark_all_read" app:showAsAction="never"/>


</menu>
