<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 Proton AG
  ~
  ~ This file is part of Proton Mail.
  ~
  ~ Proton Mail is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Proton Mail is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Proton Mail. If not, see https://www.gnu.org/licenses/.
  -->
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/hide_view"
        android:layout_width="@dimen/compose_message_button_width"
        android:layout_height="match_parent"
        android:background="@drawable/new_purple_selector"
        android:contentDescription="@null"
        android:scaleType="center"
        android:src="@drawable/encrypted_compose_white" />

    <EditText
        android:id="@+id/define_password"
        style="@style/MessagePasswordEditText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="@string/define_message_password" />

    <EditText
        android:id="@+id/confirm_password"
        style="@style/MessagePasswordEditText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="@string/confirm_message_password" />

    <EditText
        android:id="@+id/define_hint"
        style="@style/MessagePasswordHintEditText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="@string/define_password_hint" />

    <ImageButton
        android:id="@+id/next"
        android:layout_width="@dimen/compose_message_button_width"
        android:layout_height="match_parent"
        android:background="@drawable/compose_message_button_selector"
        android:contentDescription="@null"
        android:src="@drawable/next" />

</merge>
