<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2020 Proton Technologies AG

This file is part of ProtonMail.

ProtonMail is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

ProtonMail is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with ProtonMail. If not, see https://www.gnu.org/licenses/.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_xl"
        android:paddingEnd="@dimen/padding_l"
        android:paddingStart="@dimen/padding_l">

        <TextView
            android:id="@+id/title"
            style="@style/Proton.Text.DefaultSmall.Interaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan_and_user" />

        <RelativeLayout
            android:id="@+id/account_type_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:padding="@dimen/padding_l">

            <Button
                android:id="@+id/upgrade"
                style="@style/ProtonButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/upgrade"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/upgrade"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/account_type_progress"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/prefix"
                    style="@style/Proton.Text.Default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_s"
                    android:orientation="vertical" />

                <TextView
                    android:id="@+id/account_type_title"
                    style="@style/Proton.Text.Default.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/title_payment_method"
            style="@style/Proton.Text.DefaultSmall.Interaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_l"
            android:paddingTop="@dimen/padding_m"
            android:text="@string/payment_method" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_m">

            <LinearLayout
                android:id="@+id/payment_methods_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/padding_3xl">

                <TextView
                    android:id="@+id/no_payment_methods"
                    style="@style/Proton.Text.DefaultSmall.Weak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_payment_methods"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/edit_payment_methods"
                style="@style/Proton.Text.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_payment_methods"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
